--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 		<div class="backmenu">
 			<div class="menuwidth">
-				<a href="#"><img class="logo" src="images/logo.png"></a>
+			<h1><a href="#"><img class="logo" src="images/logo.png"></a></h1>
 				<ul class="menu">
 					<li><a class="asd" href="#">homepage</a><br>
 					<span class="menuInfo"> test text here <span></li>
