--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-	<!DOCTYPE html>
+<!DOCTYPE html>
 	<html>
 	<head>
 		<meta charset="utf8">
@@ -153,7 +153,7 @@
 					</li>
 
 					<li>
-						<img class="profileTwo" src="images/profile.jpg">
+						<img class="" src="images/profile.jpg">
 					
 					</li>
 				</ul>
