--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
 			<h1><a href="#"><img class="logo" src="images/logo.png"></a></h1>
 				<ul class="menu">
 					<li><a class="asd" href="#">homepage</a><br>
-					<span class="menuInfo"> test text here <span></li>
+					<span class="menuInfo"> test text here </span></li>
 					<li><a class="asd" href="#">style demo</a> <br>
-					<span class="menuInfo"> test text here <span></li>
+					<span class="menuInfo"> test text here </span></li>
 					<li><a href="#">full width </a><br>
-					<span class="menuInfo"> test text here <span></li>
+					<span class="menuInfo"> test text here </span></li>
 					<li><a href="#">portfolio </a><br>
-					<span class="menuInfo"> test text here <span></li>
+					<span class="menuInfo"> test text here </span></li>
 					<li><a href="#">gallery </a><br>
-					<span class="menuInfo"> test text here <span></li>
+					<span class="menuInfo"> test text here </span></li>
 					<li><a href="#">dropdown </a><br>
-					<span class="menuInfo"> test text here <span></li>
+					<span class="menuInfo"> test text here </span></li>
 				</ul>
 			</div>
 		</div>
