--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<span class="phone">Call Us: 77777777777</span>
 				<span> Email Us: <a class="maillink" href="mailto:webmaster@example.com"><font color="#000000"><span style='text-decoration:none; text-underline:none !important'>contact@mydomain.com</span></font></a></span>
 				<i id="searchIcon" class="fa fa-search" aria-hidden="true"></i>
-				<input class="search" type="text" name="">
+				<input class="search" type="text" name="" placeholder="Search">
 			</div>
 		</div>
 
