--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 			</div>
 
 			<div  class="copyright">
-				<span> Copyright &#169; 2017 - All Rights Reserved - Domain Name</span>
+				<small> Copyright &#169; 2017 - All Rights Reserved - Domain Name</small>
 			</div>
 
 
