--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 			<div class="contactus">
 				<span class="phone">Call Us: 77777777777</span>
-				<span> Email Us: <a class="maillink" href="mailto:webmaster@example.com"><font color="#000000"><span style='text-decoration:none; text-underline:none !important'>contact@mydomain.com</span></font></a></span>
+				<span> Email Us: <a class="maillink" href="mailto:webmaster@example.com">contact@mydomain.com</a></span>
 				<i id="searchIcon" class="fa fa-search" aria-hidden="true"></i>
 				<input class="search" type="text" name="" placeholder="Search">
 			</div>
@@ -213,7 +213,7 @@
 							<h4>contact us</h4>
 							<p>Tel: xxxxx xxxxxxxxxx <br>
 							Fax: xxxxx xxxxxxxxxx<br>
-							Email: <a class="maillinktwo" href="mailto:webmaster@example.com"><font color="#7c9c37"><span style='text-decoration:none; text-underline:none !important'>contact@mydomain.com</span></font></a></p>
+							Email: <a class="maillinktwo" href="mailto:webmaster@example.com">contact@mydomain.com</a></p>
 
 							
 							<h4>newsletter</h4>
